Adding a Texture Slot in Texture Paint mode produces a crash #57097

Closed
opened 2018-10-08 10:18:08 +02:00 by ronan ducluzeau · 7 comments

System Information
Ubuntu 16.04 64 bits and NVIDIA Titan Black driver 390.87

Blender Version
Broken: hash 215c235
Worked: (optional)

Short description of error
Adding a texture slot by using + button under Texture Slots panel in Tools Settings tab of properties produces a crash at validation of image creation.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

Open blender.
Go to Texture Paint workspace.
Press + button in Texture Slots panel at the right of screen (not popover in Topbar).
Choose Base Color and validate by pressing OK button in popup. -> Crash.

Texture_slot.crash.txt

**System Information** Ubuntu 16.04 64 bits and NVIDIA Titan Black driver 390.87 **Blender Version** Broken: hash 215c235 Worked: (optional) **Short description of error** Adding a texture slot by using + button under Texture Slots panel in Tools Settings tab of properties produces a crash at validation of image creation. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps Open blender. Go to Texture Paint workspace. Press + button in Texture Slots panel at the right of screen (not popover in Topbar). Choose Base Color and validate by pressing OK button in popup. -> Crash. [Texture_slot.crash.txt](https://archive.blender.org/developer/F4985666/Texture_slot.crash.txt)

Added subscriber: @zeauro

Added subscriber: @zeauro

#57108 was marked as duplicate of this issue

#57108 was marked as duplicate of this issue
Member

Added subscribers: @fclem, @lichtwerk

Added subscribers: @fclem, @lichtwerk
Member

Can confirm the crash.
(it is not happening with my startup file, I have to Load Factory settings to get it to crash)

1   ??                                                        0x7fffc79b1506 
2   ??                                                        0x7fffc79c2fe6 
3   ??                                                        0x7fffc757bb19 
4   GPU_batch_draw_range_ex         gpu_batch.c          631  0x25ac5de      
5   draw_geometry_execute_ex        draw_manager_exec.c  850  0x2606d6b      
6   draw_geometry_execute           draw_manager_exec.c  857  0x2606daa      
7   draw_shgroup                    draw_manager_exec.c  1212 0x2607f11      
8   drw_draw_pass_ex                draw_manager_exec.c  1285 0x2608207      
9   DRW_draw_pass                   draw_manager_exec.c  1318 0x2608388      
10  workbench_deferred_draw_scene   workbench_deferred.c 888  0x267c7cc      
11  workbench_solid_draw_background solid_mode.c         68   0x26443e1      
12  drw_engines_draw_background     draw_manager.c       1013 0x25fc1ef      
13  DRW_draw_render_loop_ex         draw_manager.c       1496 0x25fd388      
14  DRW_draw_view                   draw_manager.c       1409 0x25fcf86      
15  view3d_draw_view                view3d_draw.c        1259 0x1b26792      
16  view3d_main_region_draw         view3d_draw.c        1280 0x1b26842      
17  ED_region_do_draw               area.c               529  0x1fa7e25      
18  wm_draw_window_offscreen        wm_draw.c            537  0x19e9a54      
19  wm_draw_window                  wm_draw.c            663  0x19e9fe8      
20  wm_draw_update                  wm_draw.c            817  0x19ea4f4      
                                                            

Since it crashes at the exact same spot, #56998 might be related?
maybe @fclem can comment?

--debug-gpu output: P792

Can confirm the crash. (it is not happening with my startup file, I have to Load Factory settings to get it to crash) ``` 1 ?? 0x7fffc79b1506 2 ?? 0x7fffc79c2fe6 3 ?? 0x7fffc757bb19 4 GPU_batch_draw_range_ex gpu_batch.c 631 0x25ac5de 5 draw_geometry_execute_ex draw_manager_exec.c 850 0x2606d6b 6 draw_geometry_execute draw_manager_exec.c 857 0x2606daa 7 draw_shgroup draw_manager_exec.c 1212 0x2607f11 8 drw_draw_pass_ex draw_manager_exec.c 1285 0x2608207 9 DRW_draw_pass draw_manager_exec.c 1318 0x2608388 10 workbench_deferred_draw_scene workbench_deferred.c 888 0x267c7cc 11 workbench_solid_draw_background solid_mode.c 68 0x26443e1 12 drw_engines_draw_background draw_manager.c 1013 0x25fc1ef 13 DRW_draw_render_loop_ex draw_manager.c 1496 0x25fd388 14 DRW_draw_view draw_manager.c 1409 0x25fcf86 15 view3d_draw_view view3d_draw.c 1259 0x1b26792 16 view3d_main_region_draw view3d_draw.c 1280 0x1b26842 17 ED_region_do_draw area.c 529 0x1fa7e25 18 wm_draw_window_offscreen wm_draw.c 537 0x19e9a54 19 wm_draw_window wm_draw.c 663 0x19e9fe8 20 wm_draw_update wm_draw.c 817 0x19ea4f4 ``` ``` ``` Since it crashes at the exact same spot, #56998 might be related? maybe @fclem can comment? `--debug-gpu` output: [P792](https://archive.blender.org/developer/P792.txt)
Member

Added subscriber: @HeinzThiem

Added subscriber: @HeinzThiem

This issue was referenced by c630ce3f6d

This issue was referenced by c630ce3f6d1502f106ce7a7b51707970c95b2c0a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57097
No description provided.