Fix T57097: Crash when adding a Texture Slot in Texture Paint mode

Was caused by the use of a batch that was using a discarded index buffer.